--- a/package.json
+++ b/package.json
@@ -7,12 +7,9 @@
   "dependencies": {
     "com.unity.test-framework": "1.1.3"
   },
-  "relatedPackages": {
-    "com.unity.ide.rider.tests": "1.1.4"
-  },
   "repository": {
     "type": "git",
-    "url": "git@github.cds.internal.unity3d.com:unity/com.unity.ide.rider.git",
-    "revision": "d2ef95989104a4ce866cdcb7f94cf3c67476fcc9"
+    "url": "https://github.com/Gnarly-Games/com.gnarlygamestudio.serializer.git",
+    "revision": "679387cb1fa822190b530bdbb8ea0945f508b5f6"
   }
 }
