--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "com.gnarlygamestudio.serializer",
   "displayName": "Bridge Stream",
   "description": "BridgeStream is an order oriented binary serialization library developed for performance and efficiency.",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "unity": "2019.4",
   "dependencies": {
     "com.unity.test-framework": "1.1.3"
@@ -10,6 +10,15 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/Gnarly-Games/com.gnarlygamestudio.serializer.git",
-    "revision": "679387cb1fa822190b530bdbb8ea0945f508b5f6"
-  }
+  },
+  "author": {
+    "name": "Gnarly Game Studio",
+    "email": "info@gnarlygamestudio.com",
+    "url": "https://www.gnarlygamestudio.com/"
+  },
+  "keywords": [
+    "serializer",
+    "string to bytearray",
+    "object to bytearray"
+  ]
 }
