--- a/package.json
+++ b/package.json
@@ -17,8 +17,6 @@
     "url": "https://www.gnarlygamestudio.com/"
   },
   "keywords": [
-    "serializer",
-    "string to bytearray",
-    "object to bytearray"
+    "serializer"
   ]
 }
