--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Gnarly-Games/com.gnarlygamestudio.serializer.git",
+    "url": "https://github.com/Gnarly-Games/com.gnarlygamestudio.serializer.git"
   },
   "author": {
     "name": "Gnarly Game Studio",
@@ -17,6 +17,8 @@
     "url": "https://www.gnarlygamestudio.com/"
   },
   "keywords": [
-    "serializer"
+    "serializer",
+    "string to bytearray",
+    "object to bytearray"
   ]
 }
